[tool.poetry]
name = "ezconda"
version = "0.1.0"
description = "Create, Manage, Re-create conda environments & specifications with ease."
authors = ["Sarthak Jariwala"]
readme = "README.md"

[tool.poetry.scripts]
ezconda = "ezconda.main:app"

[tool.poetry.dependencies]
python = "^3.6"
typer = {extras = ["all"], version = "^0.4.0"}
PyYAML = "^5.4.1"
rich = "^10.11.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mkdocs = "^1.2.2"
mkdocs-material = "^8.1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
